Results merged ready for write file to filesystem